Fix findByIndexNameAndIndexValue